<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_container"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/rv_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/rv_nama_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/nama_makanan"
            android:fontFamily="@font/manrope_extrabold"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/rv_deskripsi_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi_singkat"
            android:maxLines="2"
            android:fontFamily="@font/manrope_medium"/>

        <TextView
            android:id="@+id/rv_harga_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/harga_makanan"
            android:fontFamily="@font/manrope_bold"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/rv_foto_menu"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitCenter"
        android:layout_marginEnd="12dp"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_action_name_favorite"/>

</LinearLayout>