<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HalamanAbout">

<!--    <include layout="@layout/actionbar_detail_about"-->
<!--        android:id="@+id/actionbar_about"/>-->

    <RelativeLayout
        android:id="@+id/relative_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="20sp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/aboutme"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_me"
            android:src="@drawable/fotoku"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_me"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/namaku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namaku"
            android:fontFamily="@font/manrope_extrabold"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_below="@id/image_me"
            android:layout_marginTop="40dp"
            android:textColor="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/emailku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailku"
            android:fontFamily="@font/manrope_medium"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_below="@id/namaku"
            android:layout_marginTop="7dp"
            android:textColor="?android:textColorPrimary"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>